--- a/devobs/templates/account-activity.html
+++ b/devobs/templates/account-activity.html
@@ -15,6 +15,7 @@
                             <p>Your latest account usage</p>
                         </div>
                         <div class="heading-elements">
+                            <button class="btn btn-default btn-icon"><span class="icon-printer"></span></button>
                             <button class="btn btn-default btn-icon"><span class="icon-sync"></span></button>
                         </div>
                     </div>
