--- a/devobs/templates/account-summary.html
+++ b/devobs/templates/account-summary.html
@@ -90,9 +90,8 @@
                             <div class="tile-content text-center">
                                 <h3 class="tile-title">Devonshire purchase with cash back!</h3>
                                 <span class="tile-subtitle">News</span>
-                                <p>Use your account now to get cash back as you shop! More than 20 brands and
-                                    shops! </p>
-                                <p class="text-muted text-center">25.06.2017 15:19</p>
+                                <p>Use your account now to get cash back as you shop!  More than 20 brands and shops! </p>
+                                                <img src="../static/img/shop1.png"> &nbsp; <img src="../static/img/shop2.png"> &nbsp;&nbsp;<img src="../static/img/shop3.png"> &nbsp; <a href="#"> And more...</a>
                             </div>
                         </div>
                     </li>
@@ -223,6 +222,55 @@
                     </div>
                 </div>
                 <!-- END TRANSFER -->
+
+                <div class="block block-condensed block-highlight">
+
+                    <div class="app-heading app-heading-small">
+                        <div class="icon icon-lg text-blue-400">
+                            <span class="icon-question-circle"></span>
+                        </div>
+                        <div class="title">
+                            <h2>FAQs</h2>
+                            <p>Frequently asked general questions </p>
+                        </div>
+                    </div>
+
+                    <div class="app-faq">
+
+                        <div class="app-faq-item">
+                            <div class="app-faq-item-title">What information is needed for a bill payment?</div>
+                            <div class="app-faq-item-content">
+                                <p>Generally, names, account number, phone numbers, address are needed.</p>
+                            </div>
+                        </div>
+
+                        <div class="app-faq-item">
+                            <div class="app-faq-item-title">How much loans can I apply for?</div>
+                            <div class="app-faq-item-content">
+                                <p>It really depends on your personal information and the loan type you choose.
+                                    Generally, our staff will evaluate your credit history, repayment ability and the
+                                    loan type you apply for.</p>
+                            </div>
+                        </div>
+
+                        <div class="app-faq-item">
+                            <div class="app-faq-item-title">What information do I need to apply for loans?</div>
+                            <div class="app-faq-item-content">
+                                <p>Please see more details in our Loans service page, different types of loans have
+                                    different requirements.</p>
+                            </div>
+                        </div>
+
+                        <div class="app-faq-item">
+                            <div class="app-faq-item-title">I forget my security question answer, what should I do?
+                            </div>
+                            <div class="app-faq-item-content">
+                                <p>Please contact us as soon as possible or come to our physical branches. We will
+                                    verify your personal information and help you to reset the security answer.</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
 
             </div>
         </div>
