--- a/devobs/templates/adminLogin.html
+++ b/devobs/templates/adminLogin.html
@@ -21,7 +21,7 @@
         <div class="app app-fh">
 
             <!-- START APP CONTAINER -->
-            <div class="app-container" style="background: url(assets/images/background/bg-1.jpg) center center no-repeat fixed;">
+            <div class="app-container" style="background: url(../static/assets/images/background/bg-1.jpg) center center no-repeat fixed;">
                 
                 <div class="app-login-box">                                        
                     <div class="app-login-box-user"><img src="../static/img/user/no-image.png"></div>
