--- a/devobs/templates/base-new.html
+++ b/devobs/templates/base-new.html
@@ -30,7 +30,7 @@
                     <li><a href="#" class="btn btn-link btn-icon" data-navigation-horizontal-toggle="true"><span
                             class="icon-menu"></span></a></li>
                 </ul>
-                <a href="/account-summary" class="app-header-logo app-header-logo-light app-header-logo-condensed">Project</a>
+                <a href="/index" class="app-header-logo app-header-logo-light app-header-logo-condensed">Project</a>
                 <ul class="app-header-buttons pull-right">
                     <li><a href="/logout" class="btn btn-default">Log Out</a></li>
                 </ul>
