--- a/devobs/templates/enroll.html
+++ b/devobs/templates/enroll.html
@@ -22,7 +22,7 @@
         <div class="app app-fh">
 
             <!-- START APP CONTAINER -->
-            <div class="app-container" style="background: url(assets/images/background/bg-1.jpg) center center no-repeat fixed;height: 800px;">
+            <div class="app-container" style="background: url(../static/assets/images/background/bg-1.jpg) center center no-repeat fixed;height: 800px;">
                 
                 <div class="app-login-box">
                     <div class="app-login-box-title padding-top-30">
