add employee-side pages

--- a/devobs/templates/adminLogin.html
+++ b/devobs/templates/adminLogin.html
@@ -30,7 +30,7 @@
                         <div class="subtitle">Sign in to your account</div>                        
                     </div>
                     <div class="app-login-box-container">
-                        <form action="index.html" method="post">
+                        <form action="/admin-profile" method="get">
                             <div class="form-group">
                                 <input type="text" class="form-control" name="login" placeholder="EmployeeID">
                             </div>
@@ -46,7 +46,8 @@
                                         </div>
                                     </div>
                                     <div class="col-md-6 col-xs-6">
-                                        <button class="btn btn-success btn-block">Log In</button>
+                                        <a href="/admin-profile" class="btn btn-success btn-block">Log In</a>
+{#                                        <button class="btn btn-success btn-block">Log In</button>#}
                                     </div>
                                     <a href="#" style="padding-left: 11px">Forget Password?</a>
                                 </div>
