--- a/devobs/templates/loan-student.html
+++ b/devobs/templates/loan-student.html
@@ -85,7 +85,7 @@
                         <div class="radio">
                             <label class="col-md-2 control-label">Would you like to apply with a cosigner?</label>
                             <label><input type="radio" name="cosigner" id="" value="" checked="checked">Yes</label>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                            <label>input type="radio" name="cosigner" id="" value="" required>No</label>
+                            <label><input type="radio" name="cosigner" id="" value="" required>No</label>
                         </div>
                     </div>
                     <div class="form-group">
